--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ bin/
 gen/
 
 # Local configuration file (sdk path, etc)
-proguard.cfg
-project.properties
-.settings/
-.classpath
-.project
+#proguard.cfg
+#project.properties
+#.settings/
+#.classpath
+#.project
